--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-222.8KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-597.5KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-344.9KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-167.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 波兰-1.30MB/s(Youtube:不良林), server: 217.30.10.67, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-2.14MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-212.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇦 加拿大-441.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-597.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-344.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 波兰-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
