--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-940.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-635.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇭🇰 香港-778.4KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-441.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.38MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-193.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-563.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-662.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-408.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-268.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-285.6KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.48MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇸🇬 新加坡-2.04MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-886.7KB/s(Youtube:不良林), server: ocijp.n.optage.moe, port: 44616, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: ocijp.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-670.9KB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-940.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇫🇷 法国-635.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-408.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-268.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-670.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
